extract static factory methods into the interface